(rule
 (alias runtest)
 (package landmarks-ppx)
 (deps
  test.ml
  (:ppx ../tools/standalone.exe))
 (action
  (ignore-outputs
   (with-accepted-exit-codes
    2
    (run
     ocaml
     -I
     ../../src
     -I
     ../../src/.landmarks.objs/byte
     %{lib:landmarks:landmarks.cma}
     -ppx
     "%{ppx} --as-ppx"
     test.ml)))))
